syntax = "proto3";
package pb;
option go_package = "pb";

//import "google/api/annotations.proto";
//import "protoc-gen-swagger/options/annotations.proto";
import "error.proto";
import "repeatsend.proto";

// alert rule
message AlertRule {
    string alert_rule_id = 1;
    string alert_rule_name = 2;

    RepeatSendType repeat_send_type = 3;
    int32 init_reapeat_sender_interval = 4;
    int32 max_repeat_send_interval = 5;

    int32 consecutive_count = 6;
    int32 period = 7;

    string condition_type = 8;
    float threshold = 9;
    string unit = 10;
    int32 prefer_severity = 11;
    bool enable = 12;
    bool inhibit_rule_enable = 13;

    string metric_id = 14;
    string metric_name = 15;

    string ref_alert_rule_id = 16;
}

message AlertRuleID {
    string alert_rule_id = 1;
}

message AlertRuleResponse {
    AlertRuleID alert_rule_id = 1;
    AlertRule alert_rule = 2;
    Error error = 3; //optional
}


// alert rule group
message AlertRuleGroup {
    string receiver_group_id = 1;
    string receiver_group_name = 2;
    //    Condition condition = 3;
    //    enum Condition {
    //        OR = 0;
    //        AND = 1;
    //        OTHER = 2;
    //    }
    string desc = 3;
    repeated AlertRule alert_rules = 4;
}

service AlertRuleHandler {
    // alert rule
    rpc CreateAlertRule (AlertRule) returns (AlertRuleResponse) {
    }

    rpc DeleteAlertRule (AlertRuleID) returns (AlertRuleResponse) {
    }

    rpc UpdateAlertRule (AlertRule) returns (AlertRuleResponse) {
    }

    rpc GetAlertRule (AlertRuleID) returns (AlertRuleResponse) {
    }
}